--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
@@ -235,6 +235,8 @@ set_null=valore nullo
 
 from_to_format_short=dd/MM HH\:mm
 
+date_format_short=dd/MM/yy
+
 table_header/From=Da
 
 table_header/Notes=Note
