--- a/timekeeper-reports/src/dailyprogressesdetail_it.properties
+++ b/timekeeper-reports/src/dailyprogressesdetail_it.properties
@@ -1,10 +1,11 @@
 # Locale _it for report dailyprogressesdetail.jrxml
 # Locale  for report dailyprogressesdetail.jrxml
 ReportTitle/Title/Daily_action_detail=Dettaglio giornaliero azioni
-ReportTitle/PageHeader/Daily_action_detail_for={0} - Dettaglio giornaliero azioni
+ReportTitle/PageHeader/Daily_action_detail_for={0} - Dettaglio giornaliero azioni dal {1} al {2}
+ReportTitle/PageHeader/Data_extracted_for={0} - dal {1} al {2}
 PageHeader/Title/Total=Totali
 PeriodHeader/Title/Date=Data
-TaskBandHeader/Title/Task=Attività
+TaskBandHeader/Title/Task=Attivit\u00E0
 Detail/Field/from=dalle
 Detail/Field/to=alle
 Detail/Field/notes=note
