--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
@@ -359,9 +359,9 @@ ReportDialog/ReportPresetName/Last_2_weeks=Ultime 2 settimane
 
 ReportDialog/ReportPresetName/This_month=Questo mese
 
-ReportDialog/ReportPresetName/Last_month=Ultimo mese
+ReportDialog/ReportPresetName/Previous_month=Mese precedente
 
-ReportDialog/ControlsGroup/ReportRootChoice=Estrai data per
+ReportDialog/ControlsGroup/ReportRootChoice=Limita dati al sottoalbero
 
 ReportDialog/ReportRootChoice/Workspace_root=intero workspace
 
@@ -373,9 +373,9 @@ ReportDialog/CoiceControl/to=a
 
 ReportDialog/ChoiceControl/custom=personalizzato
 
-ReportDialog/ChoiceControl/presets=predefiniti
+ReportDialog/ChoiceControl/presets=predefinito
 
-ReportDialog/ChoiceGroupTitle/Time_range=Arco temporale
+ReportDialog/ChoiceGroupTitle/Time_range=Limita dati al periodo
 
 MainWindow/StatusBar/StatusLabel/RUNNING=MISURAZIONE IN CORSO...
 
@@ -389,7 +389,7 @@ RingChart/Tooltip/node_subtree_time=sottoalbero
 
 Application=Applicazione
 
-PasteOptionsDialog/MainMessage=Rispetto a "{0}", incolla l'attivit\u00E0 come
+PasteOptionsDialog/MainMessage=Incolla "{1}" in "{0}" come
 
 PasteOptionsDialog/Title=Incolla come...
 
@@ -397,4 +397,12 @@ GeneralChoice/PasteMode/as_last_child=ultimo figlio
 
 GeneralChoice/PasteMode/before=precedente
 
-GeneralChoice/PasteMode/after=seguente
+GeneralChoice/PasteMode/after=successivo
+
+ReportDialog/LaunchButton/Confirm=Conferma
+
+ReportDialog/LaunchButton/Cancel=Annulla
+
+ReportDialog/Title/Reporting_panel=Pannello dei report
+
+ReportDialog/ControlTooltip/Preset_list_tooltip=Scegli un arco temporale preimpostato
