--- a/rbe/src/java/com/davidecavestro/rbe/gui/res_it.properties
+++ b/rbe/src/java/com/davidecavestro/rbe/gui/res_it.properties
@@ -211,7 +211,7 @@ locale_removal=rimozione locale
 
 comment_change=modifica al commento
 
-Undo+SHORTCUT=Annulla (Ctrl+>)
+Undo+SHORTCUT=Annulla (Ctrl+Z)
 
 Value=Valore
 
