--- a/rbe/src/java/com/davidecavestro/rbe/gui/res_it.properties
+++ b/rbe/src/java/com/davidecavestro/rbe/gui/res_it.properties
@@ -232,3 +232,7 @@ currentKeyFieldTooltip=La chiave corrente (selezionata)
 Undo=Annulla
 
 set_null=valore nullo
+
+Keys_tree=Keys tree
+
+Complete_key=Complete key
