ISSUE# 7 Visualizza percentuale contributo di ogni settore circolare nel grafico ad anello

--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
@@ -381,11 +381,11 @@ MainWindow/StatusBar/StatusLabel/RUNNING=MISURAZIONE IN CORSO...
 
 MainWindow/StatusBar/StatusLabel/IDLE=FERMO
 
-RingChart/Tooltip/node_total_time=totale
+RingChart/Tooltip/node_total_time=Totale
 
-RingChart/Tooltip/node_local_time=locale
+RingChart/Tooltip/node_local_time=Locale
 
-RingChart/Tooltip/node_subtree_time=sottoalbero
+RingChart/Tooltip/node_subtree_time=Sottoalbero
 
 Application=Applicazione
 
@@ -406,3 +406,13 @@ ReportDialog/LaunchButton/Cancel=Annulla
 ReportDialog/Title/Reporting_panel=Pannello dei report
 
 ReportDialog/ControlTooltip/Preset_list_tooltip=Scegli un arco temporale preimpostato
+
+task.removal.confirm.message=Vuoi veramente eliminare tutte le attivit\u00E0 selezionate?
+
+task.removal.confirm.dialogtitle=Conferma la cancellazione di attivit\u00E0
+
+action.removal.confirm.message=Vuoi veramente eliminare tutte le azioni selezionate?
+
+action.removal.confirm.dialogtitle=Conferma la cancellazione di azioni
+
+RingChart/Tooltip/parent_percentage=% sup.
