--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
@@ -41,7 +41,7 @@ date_format_short=dd/MM/yy
 
 &Name=&Nome
 
-New_progress=Nuova azione
+New_progress=Aggiungi azione
 
 &Description=&Descrizione
 
@@ -105,7 +105,7 @@ new_task=nuova attivit\u00E0
 
 delete_task=elimina attivit\u00E0
 
-new_action=nuova azione
+new_action=aggiungi azione
 
 start_action=avvia azione
 
@@ -247,7 +247,7 @@ Expand=Espandi
 
 Start_action=Avvia azione
 
-New_action=Nuova azione
+New_action=Aggiungi azione
 
 Invalid_data\:_=Dati non validi\:
 
@@ -416,3 +416,29 @@ action.removal.confirm.message=Vuoi veramente eliminare tutte le azioni selezion
 action.removal.confirm.dialogtitle=Conferma la cancellazione di azioni
 
 RingChart/Tooltip/parent_percentage=% sup.
+
+ReportDialog/ReportCHoice/DailyActionsList=Lista giornaliera azioni
+
+ReportDialog/ReportCHoice/DailyProgressesDetail=Dettaglio giornaliero attivit\u00E0
+
+TrayIcon/Tooltip/Pause=Nessuna attivit\u00E0 in corso
+
+TrayIcon/Tooltip/Working={0} in corso ({1})
+
+TrayIcon/MenuItem/Label/Start_action=Avvia azione
+
+TrayIcon/MenuItem/Label/Stop_action=Termina azione
+
+TrayIcon/MenuItem/Label/Exit=Esci
+
+TrayIcon/MenuItem/Label/Show=Mostra
+
+ReportDialog/ControlsGroup/ReportChoice=Lancia report
+
+IDLE=IN ATTESA
+
+SystemTray/InfoMesage/Message/Idle_15_minutes=Sono passati 15 minuti senza lavoro tracciato
+
+SystemTray/InfoMesage/Title/Idle_15_minutes=Promemoria
+
+TrayIcon/Tooltip/Pause_on_task=Inattivo su {0]
