COrretta parentesi placeholder

--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
@@ -441,4 +441,4 @@ SystemTray/InfoMesage/Message/Idle_15_minutes=Sono passati 15 minuti senza lavor
 
 SystemTray/InfoMesage/Title/Idle_15_minutes=Promemoria
 
-TrayIcon/Tooltip/Pause_on_task=Inattivo su {0]
+TrayIcon/Tooltip/Pause_on_task=Inattivo su {0}
