--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
@@ -167,7 +167,7 @@ Stop_action=Ferma azione
 
 Exit_from_application=Esci dall'applicazione
 
-Print=Stampa
+Print=Reportistica
 
 Import_a_workspace_from_external_file=Importa un progetto da file
 
@@ -195,7 +195,7 @@ Task\:=Attivit\u00E0\:
 
 Running_status=Stato
 
-Print_(Ctrl+P)=Stampa (Ctrl+P)
+Print_(Ctrl+P)=Reportistica (Ctrl+P)
 
 Paste_(Ctrl+V)=Incolla (Ctrl+V)
 
@@ -399,7 +399,7 @@ GeneralChoice/PasteMode/before=precedente
 
 GeneralChoice/PasteMode/after=successivo
 
-ReportDialog/LaunchButton/Confirm=Conferma
+ReportDialog/LaunchButton/Confirm=Ok
 
 ReportDialog/LaunchButton/Cancel=Annulla
 
