--- a/timekeeperlight/deploy/other-info/ReleaseNotes.txt
+++ b/timekeeperlight/deploy/other-info/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+2.5.2.0
+- Completed English version of help
+- Some cosmetic enhancements
+
 2.5.1.2
 - Fixed Java 5 incompatibility (introduced from version 2.5.1.0 - tray icon support)
 
