--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res_it.properties
@@ -437,7 +437,7 @@ ReportDialog/ControlsGroup/ReportChoice=Lancia report
 
 IDLE=IN ATTESA
 
-SystemTray/InfoMesage/Message/Idle_15_minutes=Sono passati 15 minuti senza lavoro tracciato
+SystemTray/InfoMesage/Message/Idle_15_minutes=Non stai tracciando lavoro da 15 minuti\!
 
 SystemTray/InfoMesage/Title/Idle_15_minutes=Promemoria
 
@@ -445,8 +445,10 @@ TrayIcon/Tooltip/Pause_on_task=Inattivo su {0}
 
 Launcher/ErrorMessage/DuplicatedAppInstance/Row1=Un'altra istanza di JTTS \u00E8 ancora attiva
 
-Launcher/ErrorMessage/DuplicatedAppInstance/Row2=E' possibile che sia rimasta qualche finestra aperta, o che ci siano dei processi in sospeso.
+Launcher/ErrorMessage/DuplicatedAppInstance/Row2=E' possibile che un'altra istanza dell'applicazione sia attiva, o che siano rimasti processi in sospeso.
 
 Launcher/ErrorMessage/DuplicatedAppInstance/Row3=Per evitare problemi, questa istanza verr\u00E0 terminata.
 
 Launcher/ErrorMessage/AWTUnavailable=Impossibile inizializzare l'ambiente grafico.
+
+About/System/HostButton/tooltip=Mostra le impostazioni dell'applicazione
